--- a/HB_wz_laiyuan.html
+++ b/HB_wz_laiyuan.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
 
     <title>ECharts</title>
-
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
     <!-- 引入 echarts.js -->
 
     <script src="js/echarts.min.js"></script>
