--- a/redcross.html
+++ b/redcross.html
@@ -9,13 +9,13 @@
 
 <link rel="apple-touch-icon" href="apple-touch-icon.png">
 <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="css/normalize.css">
-<link rel="stylesheet" href="css/main.css">
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<link rel="stylesheet" href="css/font-awesome.min.css">
-<link rel="stylesheet" href="css/owl.carousel.css">
-<link rel="stylesheet" href="css/responsive.css">
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="redcross/css/normalize.css">
+<link rel="stylesheet" href="redcross/css/main.css">
+<link rel="stylesheet" href="redcross/css/bootstrap.min.css">
+<link rel="stylesheet" href="redcross/css/font-awesome.min.css">
+<link rel="stylesheet" href="redcross/css/owl.carousel.css">
+<link rel="stylesheet" href="redcross/css/responsive.css">
+<link rel="stylesheet" href="redcross/css/style.css">
 
 </head>
 <body >
