--- a/redcross.html
+++ b/redcross.html
@@ -20,11 +20,7 @@
 </head>
 <body >
 	 <!-- start preloader -->
-	<div id="loader-wrapper">
-		<div class="logo"></div>
-		<div id="loader">
-		</div>
-	</div>
+
 	<!-- end preloader -->
 	
 <!-- Start Header Section -->
@@ -33,7 +29,7 @@
 	<div class="row">
 		<div class="col-lg-3 col-md-3 col-sm-12">
 			<div class="lft_hd">
-				<a href="index.html"><img src="img/logo.png" alt=""/></a>
+				<a href="index.html"><img src="redcross/img/logo.png" alt=""/></a>
 			</div>
 		</div>			
 		<div class="col-lg-9 col-md-9 col-sm-12">
@@ -665,31 +661,31 @@
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs12">
 			<div class="al_clt">						
 				<div class="sngl_clt">
-					<a href=""><img src="images/client_03.png" alt=""/></a>
+					<a href=""><img src="redcross/images/client_03.png" alt=""/></a>
 				</div>				
 				<div class="sngl_clt">
-					<a href=""><img src="images/client_03.png" alt=""/></a>
+					<a href=""><img src="redcross/images/client_03.png" alt=""/></a>
 				</div>				
 				<div class="sngl_clt">
-					<a href=""><img src="images/client_04.png" alt=""/></a>
+					<a href=""><img src="redcross/images/client_04.png" alt=""/></a>
 				</div>				
 				<div class="sngl_clt">
-					<a href=""><img src="images/client_05.png" alt=""/></a>
+					<a href=""><img src="redcross/images/client_05.png" alt=""/></a>
 				</div>				
 				<div class="sngl_clt">
-					<a href=""><img src="images/client_01.png" alt=""/></a>
+					<a href=""><img src="redcross/images/client_01.png" alt=""/></a>
 				</div>					
 				<div class="sngl_clt">
-					<a href=""><img src="images/client_03.png" alt=""/></a>
+					<a href=""><img src="redcross/images/client_03.png" alt=""/></a>
 				</div>				
 				<div class="sngl_clt">
-					<a href=""><img src="images/client_04.png" alt=""/></a>
+					<a href=""><img src="redcross/images/client_04.png" alt=""/></a>
 				</div>				
 				<div class="sngl_clt">
-					<a href=""><img src="images/client_05.png" alt=""/></a>
+					<a href=""><img src="redcross/images/client_05.png" alt=""/></a>
 				</div>				
 				<div class="sngl_clt">
-					<a href=""><img src="images/client_01.png" alt=""/></a>
+					<a href=""><img src="redcross/images/client_01.png" alt=""/></a>
 				</div>					
 
 			</div>
@@ -788,20 +784,20 @@
 </footer>
 <!-- End footer Section -->
 
-<script src="js/vendor/jquery-1.11.2.min.js"></script>
+<script src="redcross/js/vendor/jquery-1.11.2.min.js"></script>
 
-<script src="js/isotope.pkgd.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery-ui.js"></script>
-<script src="js/appear.js"></script>
-<script src="js/jquery.counterup.min.js"></script>
-<script src="js/waypoints.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/showHide.js"></script>
-<script src="js/jquery.nicescroll.min.js"></script>
-<script src="js/jquery.easing.min.js"></script>
-<script src="js/scrolling-nav.js"></script>
-<script src="js/plugins.js"></script>
+<script src="redcross/js/isotope.pkgd.min.js"></script>
+<script src="redcross/js/bootstrap.min.js"></script>
+<script src="redcross/js/jquery-ui.js"></script>
+<script src="redcross/js/appear.js"></script>
+<script src="redcross/js/jquery.counterup.min.js"></script>
+<script src="redcross/js/waypoints.min.js"></script>
+<script src="redcross/js/owl.carousel.min.js"></script>
+<script src="redcross/js/showHide.js"></script>
+<script src="redcross/js/jquery.nicescroll.min.js"></script>
+<script src="redcross/js/jquery.easing.min.js"></script>
+<script src="redcross/js/scrolling-nav.js"></script>
+<script src="redcross/js/plugins.js"></script>
 <!--<script src="https://maps.googleapis.com/maps/api/js"></script>
 <script>
 	function initialize() {
@@ -821,9 +817,9 @@
 	}
 	google.maps.event.addDomListener(window, 'load', initialize);
 </script>--->
-<script src="js/main.js"></script>
+<script src="redcross/js/main.js"></script>
 
-<script src="showHide.js" type="text/javascript"></script>
+<script src="redcross/showHide.js" type="text/javascript"></script>
 
 <script type="text/javascript">
 
