--- a/redcross.html
+++ b/redcross.html
@@ -43,7 +43,7 @@
 						</button>	
 					<div id="navbar">
 						<ul>
-							<li><a class="page-scroll" href="index.html">Home</a></li> 
+							<li><a class="page-scroll" href="redcross/index.html">Home</a></li> 
 						<li><a href="#">Our Another Page <i class="fa fa-angle-down"></i></a>
 						<ul>
 							<li><a class="page-scroll" href="#tm_sec">Our Team</a></li>
@@ -56,7 +56,7 @@
 
 						<li><a href="#">Static Page<i class="fa fa-angle-down"></i></a>
 						<ul>
-							<li><a class="page-scroll" href="blog.html">Blog Page</a></li>
+							<li><a class="page-scroll" href="redcross/blog.html">Blog Page</a></li>
 							<li><a class="page-scroll" href="single.html">Single Blog Page</a></li>
 						</ul>
 						</li> 
@@ -819,7 +819,7 @@
 </script>--->
 <script src="redcross/js/main.js"></script>
 
-<script src="redcross/showHide.js" type="text/javascript"></script>
+<script src="showHide.js" type="text/javascript"></script>
 
 <script type="text/javascript">
 
