--- a/ciyun.html
+++ b/ciyun.html
@@ -58,7 +58,7 @@ option = {
 
         sizeRange: [20, 90],
 
-        width: 800,
+        width: 1080,
 
         height: 500,
 
@@ -84,9 +84,9 @@ option = {
 
             emphasis: {
 
-                shadowBlur: 15,
+                shadowBlur: 20,
 
-                shadowColor: '#333'
+                shadowColor: '#fff'
 
             }
 
