--- a/redcross/blog3.html
+++ b/redcross/blog3.html
@@ -230,7 +230,7 @@
         </div>
 
         <!-- my script reference -->
-        <script type="text/javascript" src="assets/js/script.js"></script>
+        <script type="text/javascript" src="./assets/js/script.js"></script>
 
 
         <!-- ******BLOG LIST****** --> 
