--- a/index.html
+++ b/index.html
@@ -10,29 +10,32 @@
         margin: 0;
         padding: 0;
         line-height: 1.6;
-        color: #333;
-        background-color: #f4f4f4;
+        color: #fff;
+        background-image: url('your-image-url.jpg'); /* 替换为你的图片URL */
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
     }
     .container {
         max-width: 800px;
         margin: auto;
         overflow: hidden;
-        padding: 0 20px;
+        padding: 20px;
+        background: rgba(0, 0, 0, 0.7); /* 半透明背景 */
     }
     .header, .footer {
-        background: #333;
-        color: #fff;
-        padding: 20px 0;
         text-align: center;
+        padding: 20px 0;
     }
     .header h1, .footer p {
         margin: 0;
+        text-shadow: 2px 2px 4px #000; /* 文本阴影效果 */
     }
     .about, .contact {
         padding: 50px 0;
     }
     .about h2, .contact h2 {
-        color: #333;
+        text-shadow: 1px 1px 3px #000; /* 文本阴影效果 */
     }
 </style>
 </head>
