--- a/index.html
+++ b/index.html
@@ -3,43 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>个人主页</title>
-<style>
-    body {
-        font-family: 'Arial', sans-serif;
-        margin: 0;
-        padding: 0;
-        line-height: 1.6;
-        color: #fff;
-        background-image: url('your-image-url.jpg'); /* 替换为你的图片URL */
-        background-size: cover;
-        background-position: center;
-        background-attachment: fixed;
-    }
-    .container {
-        max-width: 800px;
-        margin: auto;
-        overflow: hidden;
-        padding: 20px;
-        background: rgba(0, 0, 0, 0.7); /* 半透明背景 */
-    }
-    .header, .footer {
-        text-align: center;
-        padding: 20px 0;
-    }
-    .header h1, .footer p {
-        margin: 0;
-        text-shadow: 2px 2px 4px #000; /* 文本阴影效果 */
-    }
-    .about, .contact {
-        padding: 50px 0;
-    }
-    .about h2, .contact h2 {
-        text-shadow: 1px 1px 3px #000; /* 文本阴影效果 */
-    }
-</style>
+<title>个人主页 - Azurini Theme</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
 <div class="header">
     <div class="container">
         <h1>我的个人主页</h1>
@@ -53,7 +21,7 @@
 
 <div class="container contact">
     <h2>联系方式</h2>
-    <p>可以在这里添加你的电子邮件、LinkedIn、GitHub或其他社交媒体链接，方便他人联系你。</p>
+    <p>在这里添加你的电子邮件、LinkedIn、GitHub或其他社交媒体链接。</p>
 </div>
 
 <div class="footer">
@@ -61,5 +29,6 @@
         <p>&copy; 2024 你的名字</p>
     </div>
 </div>
+
 </body>
 </html>
