--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>个人主页 - Azurini Theme</title>
+<title>Azurini - 个人主页</title>
 <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
 <div class="header">
     <div class="container">
-        <h1>我的个人主页</h1>
+        <h1>Azurini</h1>
     </div>
 </div>
 
 <div class="container about">
-    <h2>关于我</h2>
+    <h2>关于我 about </h2>
     <p>这里写上你自己的简介，可以包括你的职业、兴趣爱好以及你想分享的任何事情。</p>
 </div>
 
