--- a/index.html
+++ b/index.html
@@ -3,31 +3,31 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Azurini - 个人主页</title>
-<link rel="stylesheet" href="./css/style.css">
+<title>我的个人主页</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="header">
-    <div class="container">
-        <h1>Azurini</h1>
+<div class="hero" style="background-image: url('/path/to/your/background-image.jpg');">
+    <div class="hero-inner">
+        <h1>欢迎来到我的世界</h1>
+        <p>探索·创新·分享</p>
+        <a href="#about" class="hero-btn">了解更多</a>
     </div>
 </div>
 
-<div class="container about">
-    <h2>关于我 about </h2>
-    <p>这里写上你自己的简介，可以包括你的职业、兴趣爱好以及你想分享的任何事情。</p>
+<div id="about" class="section">
+    <h2>关于我</h2>
+    <p>这里是关于我的介绍——我的激情、我的项目、我的旅程。</p>
 </div>
 
-<div class="container contact">
-    <h2>联系方式</h2>
-    <p>在这里添加你的电子邮件、LinkedIn、GitHub或其他社交媒体链接。</p>
+<div class="section">
+    <h2>我的作品</h2>
+    <p>发现我最引以为豪的项目和作品。</p>
 </div>
 
 <div class="footer">
-    <div class="container">
-        <p>&copy; 2024 你的名字</p>
-    </div>
+    <p>联系我 &copy; 2024 [你的名字]</p>
 </div>
 
 </body>
