--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div class="hero" style="background-image: url('/path/to/your/background-image.jpg');">
+<div class="hero" style="background-image: url('./image/your-image-url.jpg');">
     <div class="hero-inner">
         <h1>欢迎来到我的世界</h1>
         <p>探索·创新·分享</p>
