--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>我的个人主页</title>
+<title>Azurini 的个人主页</title>
 <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -27,7 +27,7 @@
 </div>
 
 <div class="footer">
-    <p>联系我 &copy; 2024 [你的名字]</p>
+    <p>联系我 &copy; 2024 [Azurini]</p>
 </div>
 
 </body>
