--- a/index.html
+++ b/index.html
@@ -16,15 +16,48 @@
     </div>
 </div>
 
+<!-- 关于我 -->
 <div id="about" class="section">
     <h2>关于我</h2>
-    <p>这里是关于我的介绍——我的激情、我的项目、我的旅程。</p>
+    <p>我是一名热衷于技术创新的开发者，特别关注生成式AI、无人机集群和开源硬件等前沿技术。</p>
+    <div class="interests-grid">
+        <div class="interest">
+            <h3>生成式AI</h3>
+            <p>深入研究并实践了多种生成式AI技术，探索人工智能在艺术和设计中的应用。</p>
+        </div>
+        <div class="interest">
+            <h3>无人机集群</h3>
+            <p>开发了多个无人机集群项目，实现了复杂的自主飞行和任务协同。</p>
+        </div>
+        <div class="interest">
+            <h3>开源硬件</h3>
+            <p>贡献于多个开源硬件项目，致力于推动开源文化和硬件创新。</p>
+        </div>
+    </div>
 </div>
 
+<!-- 我的作品 -->
 <div class="section">
     <h2>我的作品</h2>
-    <p>发现我最引以为豪的项目和作品。</p>
+    <div class="projects-grid">
+        <div class="project">
+            <img src="project-1.jpg" alt="项目1">
+            <h3>项目1名称</h3>
+            <p>项目1的简短描述。</p>
+        </div>
+        <div class="project">
+            <img src="project-2.jpg" alt="项目2">
+            <h3>项目2名称</h3>
+            <p>项目2的简短描述。</p>
+        </div>
+        <div class="project">
+            <img src="project-3.jpg" alt="项目3">
+            <h3>项目3名称</h3>
+            <p>项目3的简短描述。</p>
+        </div>
+    </div>
 </div>
+
 
 <div class="footer">
     <p>联系我 &copy; 2024 [Azurini]</p>
