--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
     <h2>我的作品</h2>
     <div class="projects-grid">
         <div class="project">
-            <img src="project-1.jpg" alt="项目1">
+            <img src="./image/project-1.jpg" alt="项目1">
             <h3>项目1名称</h3>
             <p>项目1的简短描述。</p>
         </div>
         <div class="project">
-            <img src="project-2.jpg" alt="项目2">
+            <img src="./image/project-2.jpg" alt="项目2">
             <h3>项目2名称</h3>
             <p>项目2的简短描述。</p>
         </div>
         <div class="project">
-            <img src="project-3.jpg" alt="项目3">
+            <img src="./image/project-3.jpg" alt="项目3">
             <h3>项目3名称</h3>
             <p>项目3的简短描述。</p>
         </div>
