--- a/index.html
+++ b/index.html
@@ -23,14 +23,17 @@
     <div class="interests-grid">
         <div class="interest">
             <h3>生成式AI</h3>
+            <img src="project-1.jpg" alt="项目1">
             <p>深入研究并实践了多种生成式AI技术，探索人工智能在艺术和设计中的应用。</p>
         </div>
         <div class="interest">
             <h3>无人机集群</h3>
+            <img src="project-1.jpg" alt="项目1">
             <p>开发了多个无人机集群项目，实现了复杂的自主飞行和任务协同。</p>
         </div>
         <div class="interest">
             <h3>开源硬件</h3>
+            <img src="project-1.jpg" alt="项目1">
             <p>贡献于多个开源硬件项目，致力于推动开源文化和硬件创新。</p>
         </div>
     </div>
