--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <div class="projects-grid">
         <div class="project">
             <img src="./image/project-1.jpg" alt="项目1">
-            <h3>项目1名称</h3>
-            <p>项目1的简短描述。</p>
+            <h3>剧本杀</h3>
+            <p>《千字文》</p>
         </div>
         <div class="project">
             <img src="./image/project-2.jpg" alt="项目2">
