--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         </div>
         <div class="project">
             <img src="./image/project-2.jpg" alt="项目2">
-            <h3>项目2名称</h3>
-            <p>项目2的简短描述。</p>
+            <h3>“圣城”计划</h3>
+            <p>利用无人机和三维数字建模技术，构建一个高效、灵活的城市安全监控系统，为城市及其居民提供一个更加安全和可靠的生活环境。</p>
         </div>
         <div class="project">
             <img src="./image/project-3.jpg" alt="项目3">
